[MODORDERS-1210] Add new test to increase coverage